tests/expectations/parser/program/bidi_comment_2_fail.out
Error [EPAR0370050]: Could not lex the following content: `/* next li`.

    --> test:1:5
     |
   1 |     /* next line starts with 2069
     |     ^^
Error [EPAR0370051]: Unicode bidi override code point encountered.
    --> test:2:1
     |
   2 | â©*/
     | ^^^
